# project-samples

./: .gitignore  README.md
1-investment-screening-agent/: README.md  app.py
2-income-mentalhealth-ml-shap/: README.md
2-income-mentalhealth-ml-shap/src/: check_descriptives.py  check_sex.py  full_analysis_within_country.py  run_bootstrap_tables.py  run_bootstrap_tables_v2.py  run_bootstrap_tables_v3.py
3-gps-otree-experiment/: README.md
4-immigrants-labor-market-study/: README.md
4-immigrants-labor-market-study/package/: pyproject.toml
4-immigrants-labor-market-study/package/src/img_labormarket/analysis/: help_analysis_new.py  overview.ipynb  personality_and_beliefs.ipynb  wages.ipynb
4-immigrants-labor-market-study/package/src/img_labormarket/analysis/Gender analysis/: descriptives.ipynb  overview.ipynb  personality_and_beliefs.ipynb
4-immigrants-labor-market-study/package/src/img_labormarket/data_management/: task_pred_data.py
4-immigrants-labor-market-study/src/: overview20250130.ipynb  ttest.ipynb
5-immigrants-pay-premium-us/src/: analysis.py  build_notebook.py  us_clean_analysis.py  us_subanalysis.py
gps-otree-experiment/src/: requirements.txt  settings.py
immigrants-labor-market-study/src/: overview20250127.ipynb
immigrants-pay-premium-us/: README.md
immigrants-pay-premium-us/src/: build_notebook2.py  us_schools.py
income-mentalhealth-ml-shap/src/: check_attrition_alpha.py  combine_fig1.py  extract_shap_directions.py  regen_hetero.py  run_bootstrap_nosex.py  run_wilcoxon.py  (+1 more)
investment-screening-agent/: screening_agent.py
(+133 files in other folders)
